# ocv_samples

./: CMakeLists.txt  classification.cpp  install.md
classification/: CMakeLists.txt  classification.cpp
detection/: CMakeLists.txt  detection.cpp
